--- a/src/createCompany.html
+++ b/src/createCompany.html
@@ -11,12 +11,12 @@
     <body onload="OnLoad()">
         <div id="container" style="opacity: 0;">
             <h1>CREATE YOUR <p style="display: inline; font-size: 80px; font-style: italic;" class="special">COMPANY.</p></h1>
-            <h3 style="margin-top: -50px;">To continue using Taskify Business, create a company in order to divide maintenance roles among its members.</h3>
+            <h3 style="margin-top: -50px; margin-left: 10px; margin-right: 10px;">To continue using Taskify Business, create a company in order to divide maintenance roles among its members.</h3>
             <br>
             <div class="inputs">
                 <input type="text" placeholder="Insert here the name of your company..." style="width: 80%; margin-left: 90px;" id="inputCompany" maxlength="30" alt="Max 30 characters" spellcheck="false">
             </div>
-            <p id="warn"><img src="assets/_warn.png" width="20px" height="20px"> In your company name, put at least<b>8 characters.</b></p>
+            <p id="warn"><img src="assets/_warn.png" width="20px" height="20px"> The company name must contain at least <b style="font-weight: 700;">8 characters</b></p>
             <br> <br>
             <button id="companyCreation"><img src="assets/_create.png"  draggable="false" height="25px" width="25px"> Create</button>
         </div>
