--- a/src/popUp.html
+++ b/src/popUp.html
@@ -9,7 +9,7 @@
         <link href="https://api.fontshare.com/v2/css?f[]=excon@1&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h2>Modify Task Proprieties:</h2>
+        <h1>Modify Task <p style="display: inline;" class="special">Proprieties:</p></h1>
         <div class="modify-task-row">
             <label for="inputName" style="color: white; font-family: 'Supreme', sans-serif;">Task Name: </label>
             <input type="text" id="inputName" placeholder="Enter new task name">
