FIX: Fix Charts Tip
* Fixed the TIP position
* Fixed the text of the actual TIP

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
                 <h2><img src="assets/_createTask.png" draggable="false" height="20px" width="20px">  Task created: <p style="display: inline;"id="taskCreated"></p></h2>
                 <h2><img src="assets/_completeIcon.png" draggable="false" height="20px" width="20px">  Task completed: <p style="display: inline;" id="taskCompleted"></p></h2>
                 <canvas id="tasksChart" width="400" height="150" style="background: #232323; border-radius: 10px; margin-bottom: 30px;"></canvas>
-                <h3><img src="assets/_tip.png" height="25px" width="25px"> <p style="display: inline; color: orange;">TIP: </p> Click on 'Task Completed' or 'Created' to see the chart of a single element!</h3>
+                <h3 class="tip"><img src="assets/_tip.png" height="20px" width="20px"> <p style="display: inline; color: orange;">TIP: </p> Click on "Task Completed" or "Task Created" to see the curve of a single element.</h3>
                 <hr>
                 <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_settings.png" draggable="false" height="35px" width="35px" id="settings"> Settings:</h1>
                 <div class="settings">
