FIX: Fixed bugs with Tasks and AI
* Fixed a bug when you delete a Task now removed 1 from 'TaskCreated'
* Fixed AI button appear from nowhere

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="nameTaskUser">
                         <img src="assets/_employee.png" draggable="false" class="nameTaskUserImg">
-                        <input type="text" id="userTypeIn" placeholder="Enter the name of an employee (optional)..." spellcheck="false" title="Employee Name">
+                        <input type="text" id="userTypeIn" placeholder="Employee Name..." spellcheck="false" title="Employee Name (Optional)">
                     </div>
                     <button id="softwareAddBtn" title="Add to Tasks"><img src="assets/_add.png" width="20px" height="20px" draggable="false"> Add to Tasks</button>
                 </div>
@@ -36,7 +36,7 @@
                     </div>
                     <div class="nameTaskUser">
                         <img src="assets/_employee.png" draggable="false" class="nameTaskUserImg">
-                        <input type="text" id="userTypeOut" placeholder="Enter the name of an employee (optional)..." spellcheck="false" title="Employee Name">
+                        <input type="text" id="userTypeOut" placeholder="Employee Name..." spellcheck="false" title="Employee Name (Optional)">
                     </div>
                     <button id="fuoriAddBtn" title="Add to Tasks"><img src="assets/_add.png" width="20px" height="20px" draggable="false"> Add to Tasks</button>
                 </div>
