FIX: Fix draggable images
* fixing images who are draggable, set to false

--- a/src/createCompany.html
+++ b/src/createCompany.html
@@ -5,8 +5,8 @@
         <title>Taskify Business - Create your company</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-        <link href="https://api.fontshare.com/v2/css?f[]=supreme@1&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/companyCreation.css">
+        <link href="https://api.fontshare.com/v2/css?f[]=supreme@1&display=swap" rel="stylesheet">
     </head>
     <body onload="OnLoad()">
         <div id="container" style="opacity: 0;">
@@ -16,7 +16,7 @@
             <div class="inputs">
                 <input type="text" placeholder="Insert here the name of your company..." style="width: 80%; margin-left: 90px;" id="inputCompany" maxlength="30" alt="Max 30 characters" spellcheck="false">
             </div>
-            <p id="warn"><img src="assets/_warn.png" width="20px" height="20px"> The company name must contain at least <b style="font-weight: 700;">8 characters</b></p>
+            <p id="warn"><img src="assets/_warn.png" width="20px" height="20px" draggable="false"> The company name must contain at least <b style="font-weight: 700;">8 characters</b></p>
             <br> <br>
             <button id="companyCreation"><img src="assets/_create.png" draggable="false" height="25px" width="25px"> Create</button>
         </div>
