--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
                     <option value="orange">Orange</option>
                     <option value="yellow">Yellow</option>
                 </select>
-                <h3 class="tip"><img src="assets/_tip.png" height="20px" width="20px"> <p style="display: inline; color: orange;">TIP: </p> Click on "Task Completed" or "Task Created" to see the curve of a single element.</h3>
+                <h3 class="tip"><img src="assets/_tip.png" height="20px" width="20px" draggable="false"><p style="display: inline; color: orange;">TIP: </p> Click on "Task Completed" or "Task Created" to see the curve of a single element.</h3>
                 <hr>
                 <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_settings.png" draggable="false" height="35px" width="35px" id="settings"> Settings:</h1>
                 <div class="settings">
