--- a/src/popUp.html
+++ b/src/popUp.html
@@ -26,9 +26,9 @@
         </div>
         <br> <br>
         <div class="modify-task-row">
-            <button onclick="submitInput()" style="background-color: #009dff;">Edit Task<img src="assets/_edit.png" width="20px" height="20px" style="margin-top: 2px;"></button>
-            <button onclick="DeleteTask()" style="background-color: red;"><img src="assets/_delete.png" width="20px" height="20px" style="margin-top: 2px;"> Delete Task</button>
-            <button onclick="Quit()" style="background-color: red;"><img src="assets/_close.png" width="20px" height="20px" style="margin-top: 2px;"> Cancel</button>
+            <button onclick="submitInput()" style="background-color: #009dff;">Edit Task<img src="assets/_edit.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false"></button>
+            <button onclick="DeleteTask()" style="background-color: red;"><img src="assets/_delete.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false"> Delete Task</button>
+            <button onclick="Quit()" style="background-color: red;"><img src="assets/_close.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false"> Cancel</button>
         </div>
     </body>
     <script src="js/popUp.js"></script>
