ADD: Add a new Loader
* added a new loader for the bootUp screen

--- a/src/boot.html
+++ b/src/boot.html
@@ -13,7 +13,7 @@
             <div id="loading">
                 <div class="logo"></div>
                 <br> <br> <br>
-                <span class="loader"></span>
+                <span class="loader" style="margin-top: 200px;"></span>
             </div>
         </center>
     </body>
