--- a/src/popUp.html
+++ b/src/popUp.html
@@ -17,7 +17,6 @@
         <div id="main" style="opacity: 0;">
             <h1 style="font-size: 45px; margin-top: -5px;"><img src="assets/_edit.png" draggable="false" width="30px" height="30px"> Edit Task <p style="display: inline; font-style: inherit; font-family: 'Excon', sans-serif;" class="special">Proprieties:</p></h1>
             <h4 style="font-weight: 400; margin-top: -30px; font-family: 'Excon', sans-serif;" id="startingText">Modify the proprieties of the actual selected task.</h4>
-            <br>
             <div class="modify-task-row">
                 <label for="inputName" style="color: white; font-family: 'Excon', sans-serif;">Task Name: </label>
                 <input type="text" id="inputName" placeholder="Task Name..." title="Enter the new Task Name">
@@ -33,7 +32,7 @@
                 <input type="text" id="inputNV" placeholder="Newer Version..." title="Optional">
             </div>
             <br>
-            <div class="modify-task-row" style="justify-content: end; margin-top: -5px;">
+            <div class="modify-task-row" style="justify-content: end;" id="buttons">
                 <button onclick="submitInput()" style="background-color: #009dff;"><img src="assets/_edit.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false" title="Modify"></button>
                 <button onclick="DeleteTask()" style="background-color: red;"><img src="assets/_delete.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false" title="Delete"></button>
                 <button onclick="Quit()" style="background-color: red;"><img src="assets/_close.png" width="20px" height="20px" style="margin-top: 2px; margin-left: 1px;" draggable="false" title="Close"></button>
