FIX: Fixing ScrollTo functions
* performance improvements and bug fix for settings scrollto

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
                 </select>
                 <h3 class="tip"><img src="assets/_tip.png" height="20px" width="20px" draggable="false"><p style="display: inline; color: orange;">TIP: </p> Click on "Task Completed" or "Task Created" to see the curve of a single element.</h3>
                 <hr>
-                <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_settings.png" draggable="false" height="35px" width="35px" id="settings"> Settings:</h1>
+                <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_settings.png" draggable="false" height="35px" width="35px"> Settings:</h1>
                 <div class="settings">
                     <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_general.png" draggable="false" height="20px" width="20px"> General:</h2>
                     <div class="cleanSection">
@@ -89,7 +89,7 @@
                         <button id="cleanSectionBtn" class="cleanSectionBtn">Mark as Completed</button>
                     </div>
                     <br>
-                    <div class="cleanSection">
+                    <div class="cleanSection" id="settings">
                         <input id="nameCompany" type="text" required placeholder="Insert the new name of the Company..." style="width: 50%;" spellcheck="false">
                         <button id="changeNameBtn" class="cleanSectionBtn">Change the name</button>
                     </div>
