FIX: Fixing setting buttons
* aligned two buttons
* changed deps of "Change the Name" button

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link href="https://api.fontshare.com/v2/css?f[]=supreme@1&display=swap" rel="stylesheet">
         <link href="https://api.fontshare.com/v2/css?f[]=excon@1&display=swap" rel="stylesheet">
+        <link href="https://api.fontshare.com/v2/css?f[]=clash-display@1&display=swap" rel="stylesheet">
     </head>
     <body onload="OnLoad()">
         <div class="container" id="app">
@@ -90,8 +91,8 @@
                     </div>
                     <br>
                     <div class="cleanSection" id="settings">
-                        <input id="nameCompany" type="text" required placeholder="Insert the new name of the Company..." style="width: 50%;" spellcheck="false">
-                        <button id="changeNameBtn" class="cleanSectionBtn">Change the name</button>
+                        <input id="nameCompany" type="text" required placeholder="Insert the new name of the Company..." spellcheck="false">
+                        <button id="changeNameBtn" class="cleanSectionBtn">Change</button>
                     </div>
                     <br>
                     <input type="checkbox" id="checkbox" style="transform: scale(1.7);">
