--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
                     <option value="orange">Orange</option>
                     <option value="yellow">Yellow</option>
                 </select>
-                <h3 class="tip"><img src="assets/_tip.png" height="20px" width="20px" draggable="false"><p style="display: inline; color: orange;">TIP: </p> Click on "Task Completed" or "Task Created" to see the curve of a single element.</h3>
+                <h3 class="tip" style="font-weight: 300;"><img src="assets/_tip.png" height="20px" width="20px" draggable="false"><p style="display: inline; color: orange;"><b style="font-weight: 800;">TIP:</b>  </p> Click on <i style="font-weight: 800;">Task Completed </i> or <i style="font-weight: 800;">Task Created</i> to see the curve of a single element.</h3>
                 <hr>
                 <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_settings.png" draggable="false" height="35px" width="35px"> Settings:</h1>
                 <div class="settings">
