--- a/src/index.html
+++ b/src/index.html
@@ -61,22 +61,26 @@
                 <h2><img src="assets/_completeIcon.png" draggable="false" height="20px" width="20px">  Task completed: <p style="display: inline;" id="taskCompleted"></p></h2>
                 <canvas id="tasksChart" width="400" height="150" style="background: #232323; border-radius: 10px; margin-bottom: 30px;"></canvas>
                 <h1 style="font-family: 'Excon', sans-serif; font-size: 35px; text-align: center;">Options:</h1>
-                <label for="colorTaskCreated" style="margin-left: 20px;">Color curve <i>Task Created:</i></label>
-                <select name="selectColor" id="colorTaskCreated" style="width: 25%;">
-                    <option value="red">Red</option>
-                    <option value="green">Green</option>
-                    <option value="blue">Blue</option>
-                    <option value="orange">Orange</option>
-                    <option value="yellow">Yellow</option>
-                </select>
-                <label for="colorTaskCompleted" style="margin-left: 20px;">Color curve <i>Task Completed:</i></label>
-                <select name="selectColor" id="colorTaskCompleted" style="width: 25%;">
-                    <option value="green">Green</option>
-                    <option value="red">Red</option>
-                    <option value="blue">Blue</option>
-                    <option value="orange">Orange</option>
-                    <option value="yellow">Yellow</option>
-                </select>
+                <center>
+                    <div class="selections">
+                        <label for="colorTaskCreated" style="margin-left: 20px;">Color curve <i>Task Created:</i> </label>
+                        <select name="selectColor" id="colorTaskCreated" style="width: 25%;">
+                            <option value="red">Red</option>
+                            <option value="green">Green</option>
+                            <option value="blue">Blue</option>
+                            <option value="orange">Orange</option>
+                            <option value="yellow">Yellow</option>
+                        </select> <br> <br>
+                        <label for="colorTaskCompleted" style="margin-left: 20px;">Color curve <i>Task Completed:</i> </label>
+                        <select name="selectColor" id="colorTaskCompleted" style="width: 25%;">
+                            <option value="green">Green</option>
+                            <option value="red">Red</option>
+                            <option value="blue">Blue</option>
+                            <option value="orange">Orange</option>
+                            <option value="yellow">Yellow</option>
+                        </select>
+                    </div>
+                </center>
                 <h3 class="tip" style="font-weight: 300;"><img src="assets/_tip.png" height="20px" width="20px" draggable="false"><p style="display: inline; color: orange;"><b style="font-weight: 800;">TIP:</b>  </p> Click on <i style="font-weight: 800;">Task Completed </i> or <i style="font-weight: 800;">Task Created</i> to see the curve of a single element.</h3>
                 <hr>
                 <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_settings.png" draggable="false" height="35px" width="35px"> Settings:</h1>
