--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,8 @@
                 <h2 id="build">Build:</h2>
                 <hr>
                 <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_chart.png" draggable="false" width="35px" height="35px"> Charts:</h1>
-                <h2><img src="assets/_createTask.png" draggable="false" height="20px" width="20px">  Task created: <p style="display: inline;"id="taskCreated"></p></h2>
-                <h2><img src="assets/_completeIcon.png" draggable="false" height="20px" width="20px">  Task completed: <p style="display: inline;" id="taskCompleted"></p></h2>
+                <h2><img src="assets/_createTask.png" draggable="false" height="20px" width="20px">  Task Created: <p style="display: inline; font-weight: 500;" id="taskCreated"></p></h2>
+                <h2><img src="assets/_completeIcon.png" draggable="false" height="20px" width="20px">  Task Completed: <p style="display: inline; font-weight: 500;" id="taskCompleted"></p></h2>
                 <canvas id="tasksChart" width="400" height="150" style="background: #232323; border-radius: 10px; margin-bottom: 30px;"></canvas>
                 <h1 style="font-family: 'Excon', sans-serif; font-size: 35px; text-align: center;">Options:</h1>
                 <center>
