--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
             <div class="column">
                 <h1 style="font-family: 'Excon', sans-serif;">MAINTENANCE TASKS</h1>
                 <div class="input-group">
-                    <input type="text" id="softwareInput" placeholder="Insert the Task name..." required spellcheck="false" title="Task Name">
+                    <input type="text" id="softwareInput" placeholder="Insert the Task name..." required spellcheck="false" title="Task Name" maxlength="20">
                     <div class="version-inputs" id="software">
-                        <input type="text" id="softwarePrevVersion" placeholder="Previous Version" spellcheck="false" title="Previous Version">
-                        <input type="text" id="softwareNextVersion" placeholder="Newer Version" spellcheck="false" title="Newer Version">
+                        <input type="text" id="softwarePrevVersion" placeholder="Previous Version" spellcheck="false" title="Previous Version" maxlength="7">
+                        <input type="text" id="softwareNextVersion" placeholder="Newer Version" spellcheck="false" title="Newer Version" maxlength="7">
                     </div>
                     <div class="nameTaskUser">
                         <img src="assets/_employee.png" draggable="false" class="nameTaskUserImg">
@@ -30,10 +30,10 @@
             <div class="column">
                 <h1 style="font-family: 'Excon', sans-serif;">OUT OF MAINTENANCE</h1>
                 <div class="input-group">
-                    <input type="text" id="fuoriInput" placeholder="Insert the Task name... " required spellcheck="false" title="Task Name">
+                    <input type="text" id="fuoriInput" placeholder="Insert the Task name... " required spellcheck="false" title="Task Name" maxlength="20">
                     <div class="version-inputs" id="out">
-                        <input type="text" id="fuoriPrevVersion" placeholder="Previous Version" spellcheck="false" title="Previous Version">
-                        <input type="text" id="fuoriNextVersion" placeholder="Newer Version" spellcheck="false" title="Newer Version">
+                        <input type="text" id="fuoriPrevVersion" placeholder="Previous Version" spellcheck="false" title="Previous Version" maxlength="7">
+                        <input type="text" id="fuoriNextVersion" placeholder="Newer Version" spellcheck="false" title="Newer Version" maxlength="7">
                     </div>
                     <div class="nameTaskUser">
                         <img src="assets/_employee.png" draggable="false" class="nameTaskUserImg">
