--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
                 <h3 class="tip" style="font-weight: 300;"><img src="assets/_tip.png" height="20px" width="20px" draggable="false"><p style="display: inline; color: orange;"><b style="font-weight: 800;">TIP:</b>  </p> Click on <i style="font-weight: 800;">Task Completed </i> or <i style="font-weight: 800;">Task Created</i> to see the curve of a single element.</h3>
                 <hr>
                 <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_settings.png" draggable="false" height="35px" width="35px"> Settings:</h1>
-                <div class="settings">
+                <div class="settings" id="settings">
                     <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_general.png" draggable="false" height="20px" width="20px"> General:</h2>
                     <div class="cleanSection">
                         <select name="selectCategory" id="categoryClean">
@@ -94,7 +94,7 @@
                         <button id="cleanSectionBtn" class="cleanSectionBtn">Mark as Completed</button>
                     </div>
                     <br>
-                    <div class="cleanSection" id="settings">
+                    <div class="cleanSection">
                         <input id="nameCompany" type="text" required placeholder="Insert the new name of the Company..." spellcheck="false">
                         <button id="changeNameBtn" class="cleanSectionBtn">Change</button>
                     </div>
