ADD: Added inputversion
* retrieving current edited-todo versions

--- a/src/popUp.html
+++ b/src/popUp.html
@@ -23,12 +23,12 @@
             </div>
             <br>
             <div class="modify-task-row">
-                <label for="inputPV" style="color: white; font-family: 'Excon', sans-serif;">Task Previous Version: </label>
+                <label for="inputPV" style="color: white; font-family: 'Excon', sans-serif;">Previous Version: </label>
                 <input type="text" id="inputPV" placeholder="Previous Version..." title="Optional">
             </div>
             <br>
             <div class="modify-task-row">
-                <label for="inputNV" style="color: white; font-family: 'Excon', sans-serif;">Task Newer Version: </label>
+                <label for="inputNV" style="color: white; font-family: 'Excon', sans-serif;">Newer Version: </label>
                 <input type="text" id="inputNV" placeholder="Newer Version..." title="Optional">
             </div>
             <br>
