--- a/src/boot.html
+++ b/src/boot.html
@@ -17,5 +17,12 @@
             </div>
         </center>
     </body>
-    <script src="js/boot.js"></script>
+    <script>
+        function OnLoad(){
+            setTimeout(() => {
+                document.getElementById("loading").style.animation = "FadeOut 1s forwards";
+                setTimeout(() =>{window.location.href = "index.html";}, 1100)
+            }, 1000);
+        }
+    </script>
 </html>
