--- a/src/popUp.html
+++ b/src/popUp.html
@@ -33,9 +33,9 @@
             </div>
             <br>
             <div class="modify-task-row" style="justify-content: end;" id="buttons">
-                <button onclick="submitInput()" style="background-color: #009dff;"><img src="assets/_edit.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false" title="Modify"></button>
-                <button onclick="DeleteTask()" style="background-color: red;"><img src="assets/_delete.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false" title="Delete"></button>
-                <button onclick="Quit()" style="background-color: red;"><img src="assets/_close.png" width="20px" height="20px" style="margin-top: 2px; margin-left: 1px;" draggable="false" title="Close"></button>
+                <button onclick="submitInput()" style="background-color: #009dff;" class="editBtn"><img src="assets/_edit.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false" title="Modify"></button>
+                <button onclick="DeleteTask()" style="background-color: red;" class="deleteBtn"><img src="assets/_delete.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false" title="Delete"></button>
+                <button onclick="Quit()" style="background-color: red;" class="closeBtn"><img src="assets/_close.png" width="20px" height="20px" style="margin-top: 2px; margin-left: 1px;" draggable="false" title="Close"></button>
             </div>
         </div>
     </body>
