--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             <div class="column">
                 <h1 style="font-family: 'Excon', sans-serif;">MAINTENANCE TASKS</h1>
                 <div class="input-group">
-                    <input type="text" id="softwareInput" placeholder="Insert the Task name..." required spellcheck="false" title="Task Name" maxlength="20">
+                    <input type="text" id="softwareInput" placeholder="Enter Task name..." required spellcheck="false" title="Task Name" maxlength="20">
                     <div class="version-inputs" id="software">
                         <input type="text" id="softwarePrevVersion" placeholder="Previous Version" spellcheck="false" title="Previous Version" maxlength="7">
                         <input type="text" id="softwareNextVersion" placeholder="Newer Version" spellcheck="false" title="Newer Version" maxlength="7">
@@ -30,7 +30,7 @@
             <div class="column">
                 <h1 style="font-family: 'Excon', sans-serif;">OUT OF MAINTENANCE</h1>
                 <div class="input-group">
-                    <input type="text" id="fuoriInput" placeholder="Insert the Task name... " required spellcheck="false" title="Task Name" maxlength="20">
+                    <input type="text" id="fuoriInput" placeholder="Enter Task name... " required spellcheck="false" title="Task Name" maxlength="20">
                     <div class="version-inputs" id="out">
                         <input type="text" id="fuoriPrevVersion" placeholder="Previous Version" spellcheck="false" title="Previous Version" maxlength="7">
                         <input type="text" id="fuoriNextVersion" placeholder="Newer Version" spellcheck="false" title="Newer Version" maxlength="7">
@@ -57,13 +57,13 @@
                 <h2 id="build">Build:</h2>
                 <hr>
                 <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_chart.png" draggable="false" width="35px" height="35px"> Charts:</h1>
-                <h2><img src="assets/_createTask.png" draggable="false" height="20px" width="20px">  Task Created: <p style="display: inline; font-weight: 500; font-style: italic;" id="taskCreated"></p></h2>
-                <h2><img src="assets/_completeIcon.png" draggable="false" height="23px" width="23px">  Task Completed: <p style="display: inline; font-weight: 500; font-style: italic;" id="taskCompleted"></p></h2>
+                <h2><img src="assets/_createTask.png" draggable="false" height="20px" width="20px">  Tasks created: <p style="display: inline; font-weight: 500; font-style: italic;" id="taskCreated"></p></h2>
+                <h2><img src="assets/_completeIcon.png" draggable="false" height="23px" width="23px">  Tasks completed: <p style="display: inline; font-weight: 500; font-style: italic;" id="taskCompleted"></p></h2>
                 <canvas id="tasksChart" width="400" height="150" style="background: #232323; border-radius: 10px; margin-bottom: 30px;"></canvas>
                 <h1 style="font-family: 'Excon', sans-serif; font-size: 35px; text-align: center;">Options:</h1>
                 <center>
                     <div class="selections">
-                        <label for="colorTaskCreated" style="margin-left: 20px;">Color curve <i>Task Created:</i> </label>
+                        <label for="colorTaskCreated" style="margin-left: 20px;">Color curve <i>Tasks created:</i> </label>
                         <select name="selectColor" id="colorTaskCreated" style="width: 25%;">
                             <option value="red">Red</option>
                             <option value="green">Green</option>
@@ -71,7 +71,7 @@
                             <option value="orange">Orange</option>
                             <option value="yellow">Yellow</option>
                         </select> <br> <br>
-                        <label for="colorTaskCompleted" style="margin-left: 20px;">Color curve <i>Task Completed:</i> </label>
+                        <label for="colorTaskCompleted" style="margin-left: 20px;">Color curve <i>Tasks completed:</i> </label>
                         <select name="selectColor" id="colorTaskCompleted" style="width: 25%;">
                             <option value="green">Green</option>
                             <option value="red">Red</option>
@@ -81,7 +81,7 @@
                         </select>
                     </div>
                 </center>
-                <h3 class="tip" style="font-weight: 300;"><img src="assets/_tip.png" height="20px" width="20px" draggable="false"><p style="display: inline; color: orange;"><b style="font-weight: 800;">TIP:</b>  </p> Click on <i style="font-weight: 800;">Task Completed </i> or <i style="font-weight: 800;">Task Created</i> to see the curve of a single element.</h3>
+                <h3 class="tip" style="font-weight: 300;"><img src="assets/_tip.png" height="20px" width="20px" draggable="false"><p style="display: inline; color: orange;"><b style="font-weight: 800;">TIP:</b>  </p> Click on <i style="font-weight: 800;">"Tasks Completed" </i> or <i style="font-weight: 800;">"Tasks Created"</i> to see the progress of an individual item.</h3>
                 <hr>
                 <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_settings.png" draggable="false" height="35px" width="35px"> Settings:</h1>
                 <div class="settings" id="settings">
@@ -95,14 +95,14 @@
                     </div>
                     <br>
                     <div class="cleanSection">
-                        <input id="nameCompany" type="text" required placeholder="Insert the new name of the Company..." spellcheck="false">
+                        <input id="nameCompany" type="text" required placeholder="Enter new Company name..." spellcheck="false">
                         <button id="changeNameBtn" class="cleanSectionBtn">Change</button>
                     </div>
                     <br>
                     <input type="checkbox" id="checkbox" style="transform: scale(1.7);">
-                    <label for="checkbox" style="font-size: 20px;">Disable Auto-Close settings and informations panel.</label><br><br>
+                    <label for="checkbox" style="font-size: 20px;">Disables the auto-close of the settings panel.</label><br><br>
                     <input type="checkbox" id="joinBeta" style="transform: scale(1.7);">
-                    <label for="joinBeta" style="font-size: 20px;">Join Beta Program for AI Assistant.</label> <img class="aboutBeta" draggable="false" onclick="ShowInfoPanel()" src="assets/_about.png" width="20px" height="20px" title="If enabled, this option show a new button for AI Assistant in Beta version, if not will be not show anything.">
+                    <label for="joinBeta" style="font-size: 20px;">Join Beta Program for AI Assistant.</label> <img class="aboutBeta" draggable="false" onclick="ShowInfoPanel()" src="assets/_about.png" width="20px" height="20px" title="If enabled, this option will show the button for AI in Beta version">
                     <br> <br> <br>
                     <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_references.png" draggable="false" height="20px" width="20px"> Web References:</h2>
                     <div class="references">
@@ -116,7 +116,7 @@
                     </div>
                     <br>
                     <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_actions.png" draggable="false" height="20px" width="20px"> Actions:</h2>
-                    <button id="resetBtn" class="btn" title="Reset datas"><img src="assets/_delete.png" draggable="false" width="25px" height="25px">  Reset all datas</button>
+                    <button id="resetBtn" class="btn" title="Reset datas"><img src="assets/_delete.png" draggable="false" width="25px" height="25px">  Delete all data</button>
                     <br> <br>
                     <button id="restartBtn" class="btn" title="Restart"><img src="assets/_reload.png" draggable="false" width="23px" height="23px">  Restart</button>
                     <br> <br>
