ADD: Added icon
* added settings icon for charts options

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                 <h2><img src="assets/_createTask.png" draggable="false" height="20px" width="20px">  Tasks created: <p style="display: inline; font-weight: 500; font-style: italic;" id="taskCreated"></p></h2>
                 <h2><img src="assets/_completeIcon.png" draggable="false" height="23px" width="23px">  Tasks completed: <p style="display: inline; font-weight: 500; font-style: italic;" id="taskCompleted"></p></h2>
                 <canvas id="tasksChart" width="400" height="150" style="background: #232323; border-radius: 10px; margin-bottom: 30px;"></canvas>
-                <h1 style="font-family: 'Excon', sans-serif; font-size: 35px; text-align: center;">Options:</h1>
+                <h1 style="font-family: 'Excon', sans-serif; font-size: 35px; text-align: center;"><img src="assets/_settings.png" alt="Settings" width="30px" height="30px"> Options:</h1>
                 <center>
                     <div class="selections">
                         <label for="colorTaskCreated" style="margin-left: 20px;">Color curve <i>Tasks created:</i> </label>
